# tech_challenge_fase5

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 24805cf254f8_add_sku_test.py  5886c70609dc_remove_sku.py  cea86ba69fac_initial_migration.py
app/: __init__.py
app/async_func/: __init__.py
app/core/: __init__.py  build_app.py  build_templates.py  config.py  exeption_handlers.py  indicator.py  middleware.py
app/db/: __init__.py
app/models/: __init__.py
app/routers/api/v1/: application.py  ml.py
app/routers/pages/: index.py  logs.py
app/schemas/: ml.py
app/services/: __init__.py  ml_service.py
app/static/docs/: swagger-ui.css
app/static/js/: alpine.js
app/templates/: base.html  start_error.html
app/templates/includes/: alerts.html  footer.html  header.html
app/templates/pages/index/: main.html
app/templates/pages/logs/: main.html
config/: config.json
data/: processed_data.csv
data/xlxs/: BASE DE DADOS PEDE 2024 - DATATHON.xlsx  ~$BASE DE DADOS PEDE 2024 - DATATHON.xlsx
docs/: SWAGGER.md  data_processing.md  map_instituicao_ensino.json  model_training.md
ml_models/: best_model.joblib  feature_names.joblib  scaler.joblib
notebooks/: 1_data_processing.ipynb  2_model_train.ipynb
references/: DATATHON-PASSOS-MÁGICOS.ipynb  Links adicionais da passos.docx  PEDE_ Pontos importantes.docx  PEDE_PASSOS_DATASET_FIAP.xlsx  links.txt
scripts/: commit.py  format.bat
src/fiap/: __init__.py
src/fiap/db/: __init__.py  _main.py
src/fiap/models/: __init__.py  mixin.py
src/fiap/utils/: __init__.py  alerts.py  data_processing.py  file_transform.py  logger_manager.py  model_train.py  path.py
tests/: test_data_processing.py  test_file_transform.py  test_logger_manager.py  test_model_train.py
