[tool.poetry]
name = "tech_challenge_fase5"
version = "1.0.0"
description = "Tech challenge fase 5 FIAP"
authors = ["Gabriel Henrique Pascon <gh.pascon@gmail.com>"]
license = "MIT"
readme = "README.md"

packages = [
    { include = "fiap", from = "src" }
]

[tool.poetry.dependencies]
python = "==3.11"
mlflow = ">=3.9.0,<4.0.0"
openpyxl = "^3.1.5"

[tool.poetry.group.dev.dependencies]
tomli = "^2.2.1"
ruff = "^0.8.0"
pyinstaller = "^6.10.0"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

# =====================================================
# Ruff
# =====================================================
[tool.ruff]
exclude = [
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "generated/",
    "references/"
]

line-length = 100
target-version = "py311"
extend-include = ["*.pyi"]

lint.ignore = [
    "E203",
    "E501",
    "S101",
    "S104",
    "S105",
    "S106",
    "S107",
    "TRY003",
    "PLR0913",
    "PLR0912",
    "PLR0915",
    "PLR2004",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"**/migrations/**" = ["ALL"]
"tests/**" = ["S101", "PLR2004"]

[tool.ruff.format]
quote-style = "single"
indent-style = "tab"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true

[tool.ruff.lint.isort]
combine-as-imports = true
force-single-line = false
force-wrap-aliases = true
split-on-trailing-comma = true

# =====================================================
# Pytest
# =====================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--disable-warnings"
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "asyncio: marks tests as asyncio tests",
]